mykubernetes/03-open-webui.yml
# 03-open-webui.yml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
spec:
  type: ClusterIP 
  selector:
    app: open-webui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: open-webui
spec:
  serviceName: "open-webui"
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      volumes:
      - name: open-webui-data
        persistentVolumeClaim:
          claimName: open-webui-data-pvc
      containers:
      - name: open-webui
        image: ghcr.io/open-webui/open-webui:main
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: open-webui-data
          mountPath: /app/backend/data
        resources:
          requests:
            cpu: "250m"
            memory: "512Mi"
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 8080
        #   initialDelaySeconds: 5
        #   periodSeconds: 10
